LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/ACNT_RECP_HD__x.object-meta.xml
<CustomObject>
    <description>ACNT_RECP_HD</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>ACNT_RECP_HD</externalName>
    <label>ACNT_RECP_HD</label>
    <pluralLabel>ACNT_RECP_HD</pluralLabel>
</CustomObject>