LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/ACC_YEAR__c.field-meta.xml
<CustomField>
    <fullName>ACC_YEAR__c</fullName>
    <description>ACC_YEAR</description>
    <externalDeveloperName>ACC_YEAR</externalDeveloperName>
    <label>ACC_YEAR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>