LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/APPROVED_FLG__c.field-meta.xml
<CustomField>
    <fullName>APPROVED_FLG__c</fullName>
    <description>APPROVED_FLG</description>
    <externalDeveloperName>APPROVED_FLG</externalDeveloperName>
    <label>APPROVED_FLG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>