LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/BANK_CODE__c.field-meta.xml
<CustomField>
    <fullName>BANK_CODE__c</fullName>
    <description>BANK_CODE</description>
    <externalDeveloperName>BANK_CODE</externalDeveloperName>
    <label>BANK_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>