LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/BANK_SR_NO__c.field-meta.xml
<CustomField>
    <fullName>BANK_SR_NO__c</fullName>
    <description>BANK_SR_NO</description>
    <externalDeveloperName>BANK_SR_NO</externalDeveloperName>
    <label>BANK_SR_NO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>