LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/BOUNCE_DATE__c.field-meta.xml
<CustomField>
    <fullName>BOUNCE_DATE__c</fullName>
    <description>BOUNCE_DATE</description>
    <externalDeveloperName>BOUNCE_DATE</externalDeveloperName>
    <label>BOUNCE_DATE</label>
    <type>DateTime</type>
</CustomField>