LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/BOUNCE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>BOUNCE_FLAG__c</fullName>
    <description>BOUNCE_FLAG</description>
    <externalDeveloperName>BOUNCE_FLAG</externalDeveloperName>
    <label>BOUNCE_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>