LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/CHEQUE_DD_DATE__c.field-meta.xml
<CustomField>
    <fullName>CHEQUE_DD_DATE__c</fullName>
    <description>CHEQUE_DD_DATE</description>
    <externalDeveloperName>CHEQUE_DD_DATE</externalDeveloperName>
    <label>CHEQUE_DD_DATE</label>
    <type>DateTime</type>
</CustomField>