LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/CHEQUE_NO__c.field-meta.xml
<CustomField>
    <fullName>CHEQUE_NO__c</fullName>
    <description>CHEQUE_NO</description>
    <externalDeveloperName>CHEQUE_NO</externalDeveloperName>
    <label>CHEQUE_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>