LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/CHEQUE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CHEQUE_STATUS__c</fullName>
    <description>CHEQUE_STATUS</description>
    <externalDeveloperName>CHEQUE_STATUS</externalDeveloperName>
    <label>CHEQUE_STATUS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>