LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/CLR_BOUNCE_DATE__c.field-meta.xml
<CustomField>
    <fullName>CLR_BOUNCE_DATE__c</fullName>
    <description>CLR_BOUNCE_DATE</description>
    <externalDeveloperName>CLR_BOUNCE_DATE</externalDeveloperName>
    <label>CLR_BOUNCE_DATE</label>
    <type>DateTime</type>
</CustomField>