LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/CONTACT_CODE__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_CODE__c</fullName>
    <description>CONTACT_CODE</description>
    <externalDeveloperName>CONTACT_CODE</externalDeveloperName>
    <label>CONTACT_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>