LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/CONTRA_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CONTRA_FLAG__c</fullName>
    <description>CONTRA_FLAG</description>
    <externalDeveloperName>CONTRA_FLAG</externalDeveloperName>
    <label>CONTRA_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>