LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/CURR_ID__c.field-meta.xml
<CustomField>
    <fullName>CURR_ID__c</fullName>
    <description>CURR_ID</description>
    <externalDeveloperName>CURR_ID</externalDeveloperName>
    <label>CURR_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>