LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/DRAWN_ON__c.field-meta.xml
<CustomField>
    <fullName>DRAWN_ON__c</fullName>
    <description>DRAWN_ON</description>
    <externalDeveloperName>DRAWN_ON</externalDeveloperName>
    <label>DRAWN_ON</label>
    <length>50</length>
    <type>Text</type>
</CustomField>