LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/FOREX_RATE__c.field-meta.xml
<CustomField>
    <fullName>FOREX_RATE__c</fullName>
    <description>FOREX_RATE</description>
    <externalDeveloperName>FOREX_RATE</externalDeveloperName>
    <label>FOREX_RATE</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>