LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/INR_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>INR_AMOUNT__c</fullName>
    <description>INR_AMOUNT</description>
    <externalDeveloperName>INR_AMOUNT</externalDeveloperName>
    <label>INR_AMOUNT</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>