LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/INR_BANK_CODE__c.field-meta.xml
<CustomField>
    <fullName>INR_BANK_CODE__c</fullName>
    <description>INR_BANK_CODE</description>
    <externalDeveloperName>INR_BANK_CODE</externalDeveloperName>
    <label>INR_BANK_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>