LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/INR_BRAN_ACNT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INR_BRAN_ACNT_TYPE__c</fullName>
    <description>INR_BRAN_ACNT_TYPE</description>
    <externalDeveloperName>INR_BRAN_ACNT_TYPE</externalDeveloperName>
    <label>INR_BRAN_ACNT_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>