LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/JV_TYPE__c.field-meta.xml
<CustomField>
    <fullName>JV_TYPE__c</fullName>
    <description>JV_TYPE</description>
    <externalDeveloperName>JV_TYPE</externalDeveloperName>
    <label>JV_TYPE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>