LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/NARRATION__c.field-meta.xml
<CustomField>
    <fullName>NARRATION__c</fullName>
    <description>NARRATION</description>
    <externalDeveloperName>NARRATION</externalDeveloperName>
    <label>NARRATION</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>