LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/OLD_CONTACT_CODE__c.field-meta.xml
<CustomField>
    <fullName>OLD_CONTACT_CODE__c</fullName>
    <description>OLD_CONTACT_CODE</description>
    <externalDeveloperName>OLD_CONTACT_CODE</externalDeveloperName>
    <label>OLD_CONTACT_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>