LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/PAYEE_NAME__c.field-meta.xml
<CustomField>
    <fullName>PAYEE_NAME__c</fullName>
    <description>PAYEE_NAME</description>
    <externalDeveloperName>PAYEE_NAME</externalDeveloperName>
    <label>PAYEE_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>