LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/REC_DISP_CODE__c.field-meta.xml
<CustomField>
    <fullName>REC_DISP_CODE__c</fullName>
    <description>REC_DISP_CODE</description>
    <externalDeveloperName>REC_DISP_CODE</externalDeveloperName>
    <label>REC_DISP_CODE</label>
    <length>12</length>
    <type>Text</type>
</CustomField>