LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/REC_MODE__c.field-meta.xml
<CustomField>
    <fullName>REC_MODE__c</fullName>
    <description>REC_MODE</description>
    <externalDeveloperName>REC_MODE</externalDeveloperName>
    <label>REC_MODE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>