LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/RECEIPT_DATE__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_DATE__c</fullName>
    <description>RECEIPT_DATE</description>
    <externalDeveloperName>RECEIPT_DATE</externalDeveloperName>
    <label>RECEIPT_DATE</label>
    <type>DateTime</type>
</CustomField>