LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/RECEIPT_NO__c.field-meta.xml
<CustomField>
    <fullName>RECEIPT_NO__c</fullName>
    <description>RECEIPT_NO</description>
    <externalDeveloperName>RECEIPT_NO</externalDeveloperName>
    <label>RECEIPT_NO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>