LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/RECP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RECP_TYPE__c</fullName>
    <description>RECP_TYPE</description>
    <externalDeveloperName>RECP_TYPE</externalDeveloperName>
    <label>RECP_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>