LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/REV_JV_NO__c.field-meta.xml
<CustomField>
    <fullName>REV_JV_NO__c</fullName>
    <description>REV_JV_NO</description>
    <externalDeveloperName>REV_JV_NO</externalDeveloperName>
    <label>REV_JV_NO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>