LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/SUBMIT_DATE__c.field-meta.xml
<CustomField>
    <fullName>SUBMIT_DATE__c</fullName>
    <description>SUBMIT_DATE</description>
    <externalDeveloperName>SUBMIT_DATE</externalDeveloperName>
    <label>SUBMIT_DATE</label>
    <type>DateTime</type>
</CustomField>