LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/SUBMIT_FLG__c.field-meta.xml
<CustomField>
    <fullName>SUBMIT_FLG__c</fullName>
    <description>SUBMIT_FLG</description>
    <externalDeveloperName>SUBMIT_FLG</externalDeveloperName>
    <label>SUBMIT_FLG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>