LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/TRANS_SERV_CODE__c.field-meta.xml
<CustomField>
    <fullName>TRANS_SERV_CODE__c</fullName>
    <description>TRANS_SERV_CODE</description>
    <externalDeveloperName>TRANS_SERV_CODE</externalDeveloperName>
    <label>TRANS_SERV_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>