LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/UPDATED_DATE__c.field-meta.xml
<CustomField>
    <fullName>UPDATED_DATE__c</fullName>
    <description>UPDATED_DATE</description>
    <externalDeveloperName>UPDATED_DATE</externalDeveloperName>
    <label>UPDATED_DATE</label>
    <type>DateTime</type>
</CustomField>