LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/USER_CREATED__c.field-meta.xml
<CustomField>
    <fullName>USER_CREATED__c</fullName>
    <description>USER_CREATED</description>
    <externalDeveloperName>USER_CREATED</externalDeveloperName>
    <label>USER_CREATED</label>
    <length>8</length>
    <type>Text</type>
</CustomField>