LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/USER_UPDATED__c.field-meta.xml
<CustomField>
    <fullName>USER_UPDATED__c</fullName>
    <description>USER_UPDATED</description>
    <externalDeveloperName>USER_UPDATED</externalDeveloperName>
    <label>USER_UPDATED</label>
    <length>8</length>
    <type>Text</type>
</CustomField>