LinKreta_POC_Repository/force-app/main/default/objects/ACNT_RECP_HD__x/fields/UTR_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>UTR_NUMBER__c</fullName>
    <description>UTR_NUMBER</description>
    <externalDeveloperName>UTR_NUMBER</externalDeveloperName>
    <label>UTR_NUMBER</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>